<?xml version="1.0"?>
<package format="3">
  <name>keyboard_control</name>
  <version>0.1.0</version>
  <description>Keyboard control and topic reading for UR5 robot</description>

  <maintainer email="alexcetanas3@gmail.com">alexcetanas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>keyboard</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
